plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()
}

loom {
	// 仅使用 main 源集，客户端代码放在 src/main/java/com/beatblock/client/
	mods {
		"beatblock" {
			sourceSet sourceSets.main
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// ImGui Java bindings (UI - Dockspace 布局)，jar-in-jar 打入发布包
	def imguiVersion = "1.86.11"
	implementation include("io.github.spair:imgui-java-binding:${imguiVersion}")
	implementation include("io.github.spair:imgui-java-lwjgl3:${imguiVersion}")
	// 三平台 natives 均打入发布包；binding 运行时按 OS 加载对应 JNI，无冲突
	runtimeOnly include("io.github.spair:imgui-java-natives-windows:${imguiVersion}")
	runtimeOnly include("io.github.spair:imgui-java-natives-linux:${imguiVersion}")
	runtimeOnly include("io.github.spair:imgui-java-natives-macos:${imguiVersion}")

	// JSON 解析（BeatmapReader 使用）
	implementation include("com.google.code.gson:gson:2.10.1")

	// MP3 解码（Java Sound SPI），用于时间线真实音频播放
	implementation include("com.googlecode.soundlibs:mp3spi:1.9.5-1")
	implementation include("com.googlecode.soundlibs:tritonus-share:0.3.7-2")
	implementation include("com.googlecode.soundlibs:jlayer:1.0.1.4")

	testImplementation "org.junit.jupiter:junit-jupiter:5.11.4"
	testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
	testImplementation "org.mockito:mockito-core:5.14.2"
	testImplementation "org.mockito:mockito-junit-jupiter:5.14.2"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
}

tasks.register('verifyBundledDependencies') {
	dependsOn remapJar
	doLast {
		def jarFile = remapJar.archiveFile.get().asFile
		def nested = []
		new java.util.zip.ZipFile(jarFile).withCloseable { zip ->
			zip.entries().each { entry ->
				if (entry.name.startsWith('META-INF/jars/')) {
					nested << entry.name
				}
			}
		}
		[
			'imgui-java-binding',
			'imgui-java-lwjgl3',
			'imgui-java-natives-windows',
			'imgui-java-natives-linux',
			'imgui-java-natives-macos',
			'gson',
			'mp3spi',
			'tritonus-share',
			'jlayer',
		].each { dep ->
			if (!nested.any { it.contains(dep) }) {
				throw new GradleException("Missing bundled dependency in ${jarFile.name}: ${dep}")
			}
		}
	}
}

check.dependsOn verifyBundledDependencies

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}